--- a/MS3/viewCreditCardTransactions.html
+++ b/MS3/viewCreditCardTransactions.html
@@ -24,24 +24,40 @@
 
 
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+  <style>
+    #ignoreCSS {
+      all: unset;
+    }
+
+    html,
+    body,
+    .content {
+      background-color: #373737;
+    }
+
+    #ignorePadding {
+      padding: 0;
+    }
+  </style>
 
 </head>
+
 <body>
 
-    <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
-      <div class="preloader-inner">
-        <span class="dot"></span>
-        <div class="dots">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+  <!-- ***** Preloader Start ***** -->
+  <div id="js-preloader" class="js-preloader">
+    <div class="preloader-inner">
+      <span class="dot"></span>
+      <div class="dots">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
     </div>
-     <!-- ***** Preloader End ***** -->
+  </div>
+  <!-- ***** Preloader End ***** -->
 
- 
+
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
     <div class="container">
@@ -51,18 +67,18 @@
             <!-- ***** Logo Start ***** -->
             <a href="#" class="logo">
               <img src="resources1/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
-              <img src="resources1/images/name2.png" alt="" style="width: fit-content;  width: 150px; height: fit-content;">
+              <img src="resources1/images/name2.png" alt=""
+                style="width: fit-content;  width: 150px; height: fit-content;">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
 
-              <li><a href="loggedHome.html" class="active" style="font-size: 20px; " >Home</a></li>
+              <li><a href="loggedHome.html" style="font-size: 20px; ">Home</a></li>
               <!-- <li><a href="#announcements">Announcements</a></li> -->
-            
-              <li>
-                <a href="accountManager.html" id="ignorePadding">
-                  <i class="fa fa-user" id=profile></i></a>
+
+              <li><a onclick="history.back()" style="padding: 0%;">
+                  <i class="fa fa-arrow-circle-left" id=profile style="color: aliceblue;"></i></a>
               </li>
               <li>
                 <div class="main-button">
