--- a/MS3/viewLoanPayments.html
+++ b/MS3/viewLoanPayments.html
@@ -39,6 +39,7 @@
       padding: 0;
     }
   </style>
+
 </head>
 
 <body>
@@ -56,6 +57,7 @@
   </div>
   <!-- ***** Preloader End ***** -->
 
+
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
     <div class="container">
@@ -72,12 +74,11 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
 
-              <li><a href="loggedHome.html" class="active" style="font-size: 20px; ">Home</a></li>
+              <li><a href="loggedHome.html" style="font-size: 20px; ">Home</a></li>
               <!-- <li><a href="#announcements">Announcements</a></li> -->
 
-              <li>
-                <a href="accountManager.html" id="ignorePadding">
-                  <i class="fa fa-user" id=profile></i></a>
+              <li><a onclick="history.back()" style="padding: 0%;">
+                  <i class="fa fa-arrow-circle-left" id=profile style="color: aliceblue;"></i></a>
               </li>
               <li>
                 <div class="main-button">
