--- a/MS3/AccountManager.html
+++ b/MS3/AccountManager.html
@@ -105,7 +105,7 @@ background-size: cover;
                                 <a href="viewCreditCardTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
                                 <a href="Transfer.html" class="btn custom-btn mt-3 mt-lg-4">Transfer Money From Account</a>
                                 <a href="viewBills.html" class="btn custom-btn mt-3 mt-lg-4">View Bills</a>
-                                <a href=".html" class="btn custom-btn mt-3 mt-lg-4">Pay Bills</a>
+                                <a href="billPayment.html" class="btn custom-btn mt-3 mt-lg-4">Pay Bills</a>
                                 <a href="viewloans.html" class="btn custom-btn mt-3 mt-lg-4">View Loans</a>
                                 <a href="viewCreditCards.html" class="btn custom-btn mt-3 mt-lg-4">View Credit Cards</a>
                                 
@@ -126,7 +126,7 @@ background-size: cover;
                                 <a href="viewCreditCardTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
                                 <a href="Tranfer.html" class="btn custom-btn mt-3 mt-lg-4">Transfer Money From Account</a>
                                 <a href="viewBills.html" class="btn custom-btn mt-3 mt-lg-4">View Bills</a>
-                                <a href=".html" class="btn custom-btn mt-3 mt-lg-4">Pay Bills</a>
+                                <a href="billPayment.html" class="btn custom-btn mt-3 mt-lg-4">Pay Bills</a>
                                 <a href="viewloans.html" class="btn custom-btn mt-3 mt-lg-4">View Loans</a>
                                 <a href="viewCreditCards.html" class="btn custom-btn mt-3 mt-lg-4">View Credit Cards</a>
                                 
