--- a/MS3/ViewAccountREQ.html
+++ b/MS3/ViewAccountREQ.html
@@ -112,7 +112,7 @@
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
-			<h2 class="heading-section">New Account Requests</h2>
+			<h2 class="heading-section"style="text-align: center;">New Account Requests</h2>
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-wrap">
