--- a/MS3/ViewCreditCardDisableREQ.html
+++ b/MS3/ViewCreditCardDisableREQ.html
@@ -124,7 +124,7 @@ background-size: cover;
                                 <h7 class="mb-2">Credit Card Rank : Gold</h7><br>
                                 <h7 class="mb-2">Credit Card Name Holder : Abdullah Elnahas</h7><br>
                                 <h7 class="mb-2">National ID:12345687 </h7><br>
-                                <h7 class="mb-2">Email:abdullahElnahas@gmail.com </h7><br>
+                                <h7 class="mb-2">Balance:102933847 </h7><br>
                                 <h7 class="mb-2">Account ID:7575638 </h7><br>
                                 
 
@@ -158,7 +158,7 @@ background-size: cover;
                                 <h7 class="mb-2">Credit Card Rank : Gold</h7><br>
                                 <h7 class="mb-2">Credit Card Name Holder : Farah Maher</h7><br>
                                 <h7 class="mb-2">National ID:12345687 </h7><br>
-                                <h7 class="mb-2">Email:FarahMaher@gmail.com </h7><br>
+                                <h7 class="mb-2">Balance:123547 </h7><br>
                                 <h7 class="mb-2">Account ID:7575638 </h7><br>
                                 
 
