--- a/MS3/ViewLoanREQ.html
+++ b/MS3/ViewLoanREQ.html
@@ -112,7 +112,7 @@
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
-			<h2 class="heading-section">Loan Requests</h2>
+			<h2 class="heading-section" style="text-align: center;">Loan Requests</h2>
 
 			<div class="row">
 				<div class="col-md-12">
@@ -132,7 +132,7 @@
 							  <th></th>
 							  <td><strong>Desired loan amount</strong></td>
 							  <th></th>
-							  <td><strong>Annual income</strong></td>
+							  <td><strong>Balance</strong></td>
 							  <td><strong>National ID</strong></td>
 							
 							  <th></th>
