--- a/MS3/CloseAccBank.html
+++ b/MS3/CloseAccBank.html
@@ -110,7 +110,7 @@
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
-			<h2 class="heading-section">Close Account Requests</h2>
+			<h2 class="heading-section" style="text-align: center;">Close Account Requests</h2>
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-wrap">
