--- a/MS3/ViewCreditCardREQ.html
+++ b/MS3/ViewCreditCardREQ.html
@@ -125,7 +125,7 @@
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
 			<th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
 
-			<h2 class="heading-section">Credit Card Requests </h2>
+			<h2 class="heading-section "style="text-align: center;">Credit Card Requests </h2>
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-wrap">
@@ -144,7 +144,7 @@
 							  <th></th>
 							  <td><strong>Credit Card Rank</strong></td>
 							  <th></th>
-							  <td><strong>Annual income</strong></td>
+							  <td><strong>Balance</strong></td>
                 <td><strong>National ID</strong></td>
 							  <th></th>
 							  
