--- a/MS3/Transfer.html
+++ b/MS3/Transfer.html
@@ -138,6 +138,7 @@
               <select name="bill" id="bill">
                 <option value="internalTransfer.html">internal</option>
                 <option value="internationalTransfer.html">international</option>
+                <option value="domesticTransfer.html">domestic</option>
               </select>
               <br>
               <!--<label for="cars">account:</label>
