--- a/MS3/banker.html
+++ b/MS3/banker.html
@@ -51,7 +51,7 @@
               <li>
                 <div class="main-button">
                   <a href="index.html" style="background-color: #eae6e6; color: #000000; 
-                text-align: center; ">Log Out &#8680</a>
+                text-align: center; ">Log Out</a>
                 </div>
               </li>
 
