--- a/MS3/creditCardguest.html
+++ b/MS3/creditCardguest.html
@@ -50,9 +50,9 @@
                 <!-- ***** Logo End ***** -->
                 <!-- ***** Menu Start ***** -->
                 <ul class="nav">
-                  <li><a href="#section-1">Credit-Cards</a></li>
-                  <li><a href="#announcements">Announcements</a></li>
-                  <li><a href="#openAccount">Open Account</a></li>
+                  <li><a href="#section-1" style="font-size:14px;">Credit-Cards</a></li>
+                  <li><a href="#announcements"style="font-size:14px;">Announcements</a></li>
+                  <li><a href="#openAccount" style="font-size:14px;">Open Account</a></li>
                   <li><a onclick="history.back()" style="padding: 0%;">
                     <i class="fa fa-arrow-circle-left" id=profile style="color: aliceblue;"></i></a>
                     </li>
