--- a/MS3/AccountManager.html
+++ b/MS3/AccountManager.html
@@ -102,7 +102,7 @@ background-size: cover;
                                 <h6 class="mb-2">Account type : </h6>
                                 <h7 class="mb-2">Available Balance : </h7><br>
 
-                                <a href="viewCreditCardTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
+                                <a href="viewTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
                                 <a href="Transfer.html" class="btn custom-btn mt-3 mt-lg-4">Transfer Money From Account</a>
                                 <a href="viewBills.html" class="btn custom-btn mt-3 mt-lg-4">View Bills</a>
                                 <a href="billPayment.html" class="btn custom-btn mt-3 mt-lg-4">Pay Bills</a>
@@ -123,7 +123,7 @@ background-size: cover;
                                 <h6 class="mb-2">Account type : </h6>
                                 <h7 class="mb-2">Available Balance : </h7><br>
 
-                                <a href="viewCreditCardTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
+                                <a href="viewTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
                                 <a href="Tranfer.html" class="btn custom-btn mt-3 mt-lg-4">Transfer Money From Account</a>
                                 <a href="viewBills.html" class="btn custom-btn mt-3 mt-lg-4">View Bills</a>
                                 <a href="billPayment.html" class="btn custom-btn mt-3 mt-lg-4">Pay Bills</a>
