--- a/MS3/viewLoans.html
+++ b/MS3/viewLoans.html
@@ -101,7 +101,7 @@
         <div class="row">
 
             <div class="col-lg-12 col-12 text-center">
-                <h3 class="mb-4">Loans Overview</h3>
+                <h3 class="mb-4"  style="color:white">Loans Overview</h3>
             </div>
 
             <div class="col-lg-8 col-12 mt-3 mx-auto">
