--- a/MS3/index.html
+++ b/MS3/index.html
@@ -106,7 +106,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="transactions.html">Transactions</a>
+                        <a id="services" href="transactionsguest.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCardguest.html">Credit Cards</a>
@@ -135,7 +135,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="transactions.html">Transactions</a>
+                        <a id="services" href="transactionsguest.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCardguest.html">Credit Cards</a>
@@ -164,7 +164,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="transactions.html">Transactions</a>
+                        <a id="services" href="transactionsguest.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCardguest.html">Credit Cards</a>
@@ -194,7 +194,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="transactions.html">Transactions</a>
+                        <a id="services" href="transactionsguest.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCardguest.html">Credit Cards</a>
@@ -223,7 +223,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="transactions.html">Transactions</a>
+                        <a id="services" href="transactionsguest.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCardguest.html">Credit Cards</a>
@@ -252,7 +252,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="transactions.html">Transactions</a>
+                        <a id="services" href="transactionsguest.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCardguest.html">Credit Cards</a>
@@ -281,7 +281,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="transactions.html">Transactions</a>
+                        <a id="services" href="transactionsguest.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCardguest.html">Credit Cards</a>
