--- a/MS3/loggedHome.html
+++ b/MS3/loggedHome.html
@@ -243,7 +243,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="Billstransactionslogged.html">Transactions</a>
+                        <a id="services" href="transactionslogged.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCard.html">Credit Cards</a>
@@ -301,7 +301,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="Billstransactionslogged.html">Transactions</a>
+                        <a id="services" href="transactionslogged.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCard.html">Credit Cards</a>
@@ -331,7 +331,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="Billstransactionslogged.html">Transactions</a>
+                        <a id="services" href="transactionslogged.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCard.html">Credit Cards</a>
@@ -360,7 +360,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="Billstransactionslogged.html">Transactions</a>
+                        <a id="services" href="transactionslogged.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCard.html">Credit Cards</a>
@@ -389,7 +389,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="Billstransactionslogged.html">Transactions</a>
+                        <a id="services" href="transactionslogged.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCard.html">Credit Cards</a>
@@ -418,7 +418,7 @@
                   <div class="more-info">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="Billstransactionslogged.html">Transactions</a>
+                        <a id="services" href="transactionslogged.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="creditCard.html">Credit Cards</a>
