--- a/MS3/transactionsguest.html
+++ b/MS3/transactionsguest.html
@@ -194,7 +194,7 @@
             <!-- ***** Logo End ***** -->
                   <!-- ***** Menu Start ***** -->
                   <ul class="nav">
-                    <li><a href="#section-1" class="active">Home</a></li>
+                    <li><a href="#section-1" class="active">Transactions</a></li>
                     <li><a href="#announcements">Announcements</a></li>
                     <li><a href="#openAccount">Open Account</a></li>
                     <li>
