--- a/MS3/loggedHome.html
+++ b/MS3/loggedHome.html
@@ -197,6 +197,7 @@
 
               <li><a href="loggedHome.html" class="active">Home</a></li>
               <li><a href="#announcements">Announcements</a></li>
+              <li><a href="Reminders.html">Reminders</a></li>
               <li><a onclick="termConditions();return false;" id="ignorePadding">
                   <i class="fa fa-bell" id=profile></i></a></li>
               <li>
